# tc001_reader

./: Cargo.toml  README.md
src/: main.rs
tc001_c_reader/: CMakeLists.txt  image_writer.c  image_writer.h  makefile
tc001_c_reader/build-android-$ABI/: CMakeCache.txt
tc001_c_reader/build-android-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tc001_c_reader/build-android-arm64-v8a/: CMakeCache.txt
tc001_c_reader/core/include/: tc001.h  tc001_export.h
tc001_c_reader/core/src/: platform_posix.c  tc001.c
tc001_c_reader/examples/: reader.c
